[package]
name = "yggdrasil-keygen"
version = "0.2.0"
authors = ["Jan Christian Grünhage <jan.christian@gruenhage.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
directories-next = "2"
env_logger = "0.9"
fd-lock = "3"
rand = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
yggdrasil-keys = "0.3"
