[package]
name = "yggdrasil-keygen"
version = "0.3.0"
authors = ["Jan Christian Grünhage <jan.christian@gruenhage.xyz>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "4.5.16", features = ["derive", "env", "wrap_help"] }
directories = "5"
env_logger = "0.11"
fd-lock = "4"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
yggdrasil-keys = "0.4"
